--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.monprojet</groupId>
+	<groupId>com.kicekiroule</groupId>
 	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pdf-generator</name>
