--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=pdf-generator
+spring.application.name=kicekiroule-smatin
+
+google.api.key=${GOOGLE_API_KEY}
+google.sheet.id=${GOOGLE_SHEET_ID}
+
+
